--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -44,4 +44,18 @@ scales: {
 });
 </script>
 
+</html>-->
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Chart.js example</title>
+  </head>
+  <body>
+    <div style="width: 500px;"><canvas id="dimensions"></canvas></div><br/>
+    <div style="width: 800px;"><canvas id="acquisitions"></canvas></div>
+
+    <script type="module" src="dimensions.js"></script>
+    <script type="module" src="acquisitions.js"></script>
+  </body>
 </html>
