--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,8 @@ scales: {
   </head>
   <body>
     <div style="width: 500px;"><canvas id="dimensions"></canvas></div><br/>
-    <div style="width: 800px;"><canvas id="acquisitions"></canvas></div>
+    <div style="width: 800px;"><canvas id="acquisitions"></canvas></div><br>
+    <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
 
     <script type="module" src="dimensions.js"></script>
     <script type="module" src="acquisitions.js"></script>
